Docker-Source/containerCreation/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: cccontainerregistry1.azurecr.io/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
      imagePullSecrets:
        - name: docker-secret-1
