Docker-Source/containerCreation/pod-creation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
spec:
  containers:
  - name: backend
    image: cccontainerregistry1.azurecr.io/backend:latest
  imagePullSecrets:
  - name: docker-secret
