Docker-Source/containerCreation/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
  - protocol: "TCP"
    port: 8888
    targetPort: 9999
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  selector:
    matchLabels:
      app: backend-app
  replicas: 5
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: cccontainerregistry1.azurecr.io/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9999
